# plate

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  INSTALL  INSTALL.md  README.md  run.sh
include/plate/cli/: command_line_options.hpp
include/plate/core/: bounding_box.hpp  cuda_check.hpp
include/plate/detector/: license_plate_detector.hpp
include/plate/draw/: draw.hpp
include/plate/filter/: npp_filters.hpp
include/plate/image/: image_buffer.hpp  image_io.hpp
src/app/: main.cpp
src/cli/: command_line_options.cpp
src/detector/: ccl.cu  license_plate_detector.cpp
src/draw/: draw.cpp
src/filter/: npp_filters.cu
src/image/: image_io.cpp
